@@ -1,7 +1,7 @@
 ## vim: ft=automake comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 # =============================================================================
 # 
-# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.22 $) $Date: 2007/08/13 15:21:59 $
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.23 $) $Date: 2007/11/06 09:33:53 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -46,7 +46,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/08/13 15:21:59 $ by $Author: brian $
+# Last Modified $Date: 2007/11/06 09:33:53 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -242,6 +242,9 @@ include ../../am/info.am
 ## =============================================================================
 ##
 ## $Log: Makefile.am,v $
+## Revision 0.9.2.23  2007/11/06 09:33:53  brian
+## - added sg document
+##
 ## Revision 0.9.2.22  2007/08/13 15:21:59  brian
 ## - header updates, added references
 ##
