@@ -2,7 +2,7 @@
 % vim: ft=texinfo nosmartindent nocindent noautoindent tw=100
 % =========================================================================
 %
-% @(#) $Id: cnam.texi,v 0.9.2.4 2007/08/14 12:16:56 brian Exp $
+% @(#) $Id: cnam.texi,v 0.9.2.5 2007/11/06 09:33:53 brian Exp $
 %
 % =========================================================================
 %
@@ -54,7 +54,7 @@
 % 
 % =========================================================================
 %
-% Last Modified $Date: 2007/08/14 12:16:56 $ by $Author: brian $
+% Last Modified $Date: 2007/11/06 09:33:53 $ by $Author: brian $
 %
 % =========================================================================
 \input texinfo @c -*-texinfo-*-
@@ -371,6 +371,9 @@ Project} website for a current version.
 @smallexample
 
 $Log: cnam.texi,v $
+Revision 0.9.2.5  2007/11/06 09:33:53  brian
+- added sg document
+
 Revision 0.9.2.4  2007/08/14 12:16:56  brian
 - GPLv3 header updates
 
